# gpt2-engine-cpp

./: .gitignore  CMakeLists.txt  README.md  run_benchmarks.py
benchmarks/: CMakeLists.txt  cpu_bench.cpp  gpu_bench.cu  gpu_bench_ncu.cu  gpu_bench_no_cache.cu  hf_bench.py
benchmarks/cpu_benchmarks/: output
benchmarks/gpu_benchmarks/: output
benchmarks/hf_benchmarks/: output
benchmarks/kv_cache_benchmarks/: output
benchmarks/memory/: cpu_output
benchmarks/ncu_reports/: ncu_output_kv  ncu_short
benchmarks/outputs/: cpu_output
benchmarks/tokens_benchmarks/: gpu_output  hf_output
data/: export_weights.py  export_weights_info.txt
docs/: dev_log.md
include/: inference_engine.hpp  ops.hpp  tokenizer.hpp  weights_loader.hpp
src/: CMakeLists.txt  main.cpp  main.cu
src/backend/: inference_engine.cpp  inference_engine.cu
src/utils/: a.out  loader.cpp  ops.cpp  ops.cu  tokenizer.cpp  weights_loader.cpp
test/: attention_test.py  check_layer.py  layers_check.py
tests/: CMakeLists.txt  h_input.txt  h_output.txt  test_attention.cu
tests/validation_tests/: h_output.txt  test_attention.cu  validate_attention.py
